# $Id$

Griffith ChangeLog
------------------
(c) 2005-2009  Vasco Nunes, Piotr Ożarowski


2009-01-31  Michael Jahn
	* Allocine movie plugin updated
	* small unicode fixes for 7arte movie plugin

2009-01-28  Michael Jahn
	* FilmAffinity movie plugin updated

2009-01-24  Michael Jahn
	* DVD-Palace movie plugin updated

2009-01-22  Michael Jahn
	* fixed Greek translation of the word "Danish" (thanks to Johnny)

2009-01-18  Piotr Ożarowski
	* Upgrading from 0.6.2 partially fixed (posters are missing)
	* Add loaned_movies_count and returned_movies_count properties to Person

2009-01-17  Piotr Ożarowski
	* Use MediumBLOB on MySQL to store posters. Database has to be recreated if 0.10-beta1 was used to create it.
	* Few SQL optimizations

2009-01-16  Piotr Ożarowski
	* Print move details during startup in debug mode

2009-01-16  Michael Jahn
	* [#317837] 007 james bond (PDF export grouping error)

2009-01-15  Michael Jahn
	* Amazon movie plugin updated
	* better results for amazon poster search
	* movie plugin base class prepared for fetching screenplay and cameraman,
	  added fetching of screenplay to IMDB plugin 

2009-01-06  Michael Jahn
	* MovieFone movie plugin updated
	* windows installer: movie import plugins deselectable from installation

2009-01-04  Piotr Ożarowski
	* MyMoviesIt movie plugin added (thanks to Giovanni Sposito)

2009-01-03  Michael Jahn
	* [#313012] correctly round ratings

2009-01-02  Michael Jahn
	* PTGate movie plugin updated

2008-12-25  Michael Jahn
	* [#309373] export to pdf
	* Cinematografo movie plugin updated

2008-12-19  Michael Jahn
	* OFDb, IMDB-de movie plugin updated

2008-12-16  Michael Jahn
	* IMDB movie plugin updated

2008-12-16  Piotr Ożarowski
	* Reload movie plugin each time search is performed (in --debug mode only, this should ease writing plugins)
	* Canceling search doesn't throw exception anymore (closes: 100038)

2008-12-07  Piotr Ożarowski