@@ -5,6 +5,11 @@ Griffith ChangeLog
 (c) 2005-2009  Vasco Nunes, Piotr Ożarowski
 
 
+2009-02-01  Piotr Ożarowski
+	* Add interactive shell (--shell commandline option)
+	* Add barcode column to the movie table
+	* Change default type of runtime and year to SmallInteger
+
 2009-01-31  Michael Jahn
 	* Allocine movie plugin updated
 	* small unicode fixes for 7arte movie plugin
